--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov tact --cov-report term-missing
+    --cov tact --cov-report term-missing --cov-report html
     --verbose
 norecursedirs =
     dist
