--- a/setup.cfg
+++ b/setup.cfg
@@ -27,11 +27,12 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.1a0,<3.2a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-# install_requires = numpy; scipy
+install_requires =
+    voluptuous~=0.11.5
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+python_requires = >=3.7
 
 [options.packages.find]
 where = src
@@ -42,6 +43,8 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install tact[PDF]` like:
 # PDF = ReportLab; RXP
+server =
+    aioredis~=1.2.0
 # Add here test requirements (semicolon/line-separated)
 testing =
     pytest
