--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,8 @@ testing =
     pytest
     pytest-cov
     pytest-asyncio
+ci =
+    coveralls~=1.5.1
 
 [options.entry_points]
 # Add here console scripts like:
