Add pylint checks

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,16 @@ python: "3.7"
 # Set up package in development mode, then install CI extras to make them
 # invocable via the CLI. (Note that these get installed anyway as part of
 # `setup.py test`, unfortunately.)
+#
+# FIXME: We need to fully install testing dependencies so that pylint knows
+# how to resolve pytest, but this is at least theoretically a bit ugly.
 install:
   - python setup.py develop
-  - pip install tact[develop,ci]
+  - pip install tact[develop,testing,ci]
 
 script:
   - python setup.py test
+  - pylint setup.py tact tests/*
   - mypy --ignore-missing-imports src tests
 
 after_success:
