main: Add server entrypoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,12 +58,8 @@ ci =
     coveralls~=1.5.1
 
 [options.entry_points]
-# Add here console scripts like:
-# console_scripts =
-#     script_name = tact.module:function
-# For example:
-# console_scripts =
-#     fibonacci = tact.skeleton:run
+console_scripts =
+    tact = tact.__main__:main
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
