--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ package_dir =
 setup_requires = pyscaffold>=3.1a0,<3.2a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 install_requires =
+    structlog~=18.2.0
     voluptuous~=0.11.5
     websockets~=7.0
 # The usage of test_requires is discouraged, see `Dependency Management` docs
